2011-01-21  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testBeliefState.cpp: Add testBeliefState.
	* testsuite/Makefile.am: Likewise.

	* include/mcs/BeliefState.h: Add PartialBeliefState.

2011-01-21  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/Session.h: Add docstring.

	* include/network/Handler.h: Fix non-threadsafe parts.
	* include/network/Handler.tcc: Likewise.
	* include/network/Server.h: Likewise.
	* src/network/Server.cpp: Likewise.

	* include/dmcs/StreamingCommandType.h: Fix warning.

	* testsuite/testConnection.cpp: Add connection test.
	* testsuite/Makefile.am: Likewise.

	* testsuite/testBlockingClasp.cpp: Use BOOST_TEST_MESSAGE.

2011-01-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dmcsd.cpp: Add --daemon option.
	* include/dmcs/ProgramOptions.h: Likewise.

	* examples/pingpong.sh: Add shell script.

	* src/dmcs/BeliefCombination.cpp: Cleanup.

	* include/parser/BridgeRulesBuilder.tcc: Fix regression.

	* include/solver/SatSolver.tcc: Add support for DMCS_LOG_*.
	* include/parser/ParserDirector.tcc: Likewise.
	* include/parser/BridgeRulesBuilder.tcc: Likewise.
	* include/dyndmcs/Instantiator.tcc: Likewise.
	* testsuite/Makefile.am: Likewise.
	* testsuite/testBlockingClasp.cpp: Likewise.
	* testsuite/testTranslation.cpp: Likewise.
	* testsuite/testClaspResultOnlineParser.cpp: Likewise.
	* src/dmcs/BaseDMCS.cpp: Likewise.
	* src/dmcs/Cache.cpp: Likewise.
	* src/dmcs/OptDMCS.cpp: Likewise.
	* src/dmcs/PrimitiveDMCS.cpp: Likewise.
	* src/dyndmcs/DynamicConfiguration.cpp: Likewise.
	* src/dyndmcs/Instantiator.cpp: Likewise.
	* src/parser/ClaspResultOnlineParser.cpp: Likewise.

	* include/network/BaseClient.h: Fix warning.

	* include/mcs/Rule.h: Fix argument-dependent name lookup.

	* include/dmcs/Log.h (DMCS_LOG_TRACE): Beautification.

2011-01-19  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/network/OutputThread.cpp: Add some more debugging
	information

	* src/network/JoinThread.cpp: Fix join.
